# LDSCrs

./: Cargo.toml  LICENSE  README.md  test.snplist  test.sumstats.maf.ncc.txt  test.sumstats.maf.txt  test.sumstats.txt
src/: const_value.rs  lib.rs  munge_sumstats.rs  utils.rs
