[package]
name = "ldscrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bzip2 = "0.4.4"
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
env_logger = "0.11.5"
flate2 = "1.0.34"
log = "0.4.22"
xz2 = "0.1.7"
phf = { version = "0.11", default-features = false, features = ["macros"] }
polars = { version = "0.44.2", features = ["concat_str", "csv", "is_in", "lazy", "polars-io", "strings"] }
rand = "0.8.5"
statrs = "0.17.1"
rayon = "1.10.0"


[[bin]]
name = "munge_sumstats"
path = "src/munge_sumstats.rs"

[[bin]]
name = "ldscrs"
path = "src/main.rs"
